@@ -3,22 +3,14 @@
 # $Id$
 
 require "mkmf"
+require File.expand_path("../../digest_conf", __FILE__)
 
 $defs << "-DNDEBUG" << "-DHAVE_CONFIG_H"
 $INCFLAGS << " -I$(srcdir)/.."
 
 $objs = [ "rmd160init.#{$OBJEXT}" ]
 
-if !with_config("bundled-rmd160") &&
-    (dir_config("openssl")
-     pkg_config("openssl")
-     require File.expand_path('../../../openssl/deprecation', __FILE__)
-     have_library("crypto")) &&
-    OpenSSL.check_func("RIPEMD160_Transform", "openssl/ripemd.h")
-  $objs << "rmd160ossl.#{$OBJEXT}"
-else
-  $objs << "rmd160.#{$OBJEXT}"
-end
+digest_conf("rmd160", "ripemd", "RIPEMD160")
 
 have_header("sys/cdefs.h")
 
