@@ -3,22 +3,14 @@
 # $Id$
 
 require "mkmf"
+require File.expand_path("../../digest_conf", __FILE__)
 
 $defs << "-DHAVE_CONFIG_H"
 $INCFLAGS << " -I$(srcdir)/.."
 
 $objs = [ "sha1init.#{$OBJEXT}" ]
 
-if !with_config("bundled-sha1") &&
-    (dir_config("openssl")
-     pkg_config("openssl")
-     require File.expand_path('../../../openssl/deprecation', __FILE__)
-     have_library("crypto")) &&
-    OpenSSL.check_func("SHA1_Transform", "openssl/sha.h")
-  $objs << "sha1ossl.#{$OBJEXT}"
-else
-  $objs << "sha1.#{$OBJEXT}"
-end
+digest_conf("sha1", "sha")
 
 have_header("sys/cdefs.h")
 
