@@ -3,24 +3,15 @@
 # $Id$
 
 require "mkmf"
+require File.expand_path("../../digest_conf", __FILE__)
 
 $defs << "-DHAVE_CONFIG_H"
 $INCFLAGS << " -I$(srcdir)/.."
 
 $objs = [ "sha2init.#{$OBJEXT}" ]
 
-if !with_config("bundled-sha2") &&
-    (dir_config("openssl")
-     pkg_config("openssl")
-     require File.expand_path('../../../openssl/deprecation', __FILE__)
-     have_library("crypto")) &&
-    %w[SHA256 SHA512].all? {|d| OpenSSL.check_func("#{d}_Transform", "openssl/sha.h")} &&
-    %w[SHA256 SHA512].all? {|d| have_type("#{d}_CTX", "openssl/sha.h")}
-  $objs << "sha2ossl.#{$OBJEXT}"
-  $defs << "-DSHA2_USE_OPENSSL"
-else
+unless digest_conf("sha2", "sha", %w[SHA256 SHA512])
   have_type("u_int8_t")
-  $objs << "sha2.#{$OBJEXT}"
 end
 
 have_header("sys/cdefs.h")
